Continue working on the integration test for enumerate
